<resources>
    <string name="app_name">Ejercicio01_ComponentesBasicos</string>
    <string name="Mostrar_Resultado">0</string>
    <string name="Boton1">1</string>
    <string name="Boton2">2</string>
    <string name="Boton3">3</string>
    <string name="Boton4">4</string>
    <string name="Boton5">5</string>
    <string name="Boton6">6</string>
    <string name="Boton7">7</string>
    <string name="Boton8">8</string>
    <string name="Boton9">9</string>
    <string name="BotonMas">+</string>
    <string name="BotonMenos">-</string>
    <string name="Boton_Resta">-</string>
    <string name="BotonIgual">=</string>
    <string name="BotonLimpiar">C</string>
</resources>