<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <TextView
        android:id="@+id/tv_Resultado"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom|right"
        android:hint="@string/Mostrar_Resultado"
        android:textColorHint="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton1" />

        <Button
            android:id="@+id/btn_Dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton2" />

        <Button
            android:id="@+id/btn_Tres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton3" />

        <Button
            android:id="@+id/btn_Mas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BotonMas" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Cuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton4" />

        <Button
            android:id="@+id/btn_Cinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton5" />

        <Button
            android:id="@+id/btn_Seis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton6" />

        <Button
            android:id="@+id/btn_Menos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Boton_Resta" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Siete"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Boton7" />

        <Button
            android:id="@+id/btn_Ocho"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Boton8" />

        <Button
            android:id="@+id/btn_Nueve"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Boton9" />

        <Button
            android:id="@+id/btn_Igual"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/BotonIgual" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Limpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BotonLimpiar" />

</LinearLayout>